--- a/src/component/Home/home.module.css
+++ b/src/component/Home/home.module.css
@@ -3,31 +3,46 @@ body {
   padding: 0;
 }
 
+.lContainer {
+  float: left;
+  width: 50%;
+}
+
+.rContainer{
+  float: left;
+  width: 50%;
+}
+
 .container {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   padding: 20px;
+  width: 100%;
 }
 
 .form {
-  max-width: 50%;
   padding: 20px;
   background-color: #ffffff;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  margin-right: 10px;
-  margin-bottom: 20px; 
+  margin: 10px;
 }
 
 .tableContainer {
-  max-width: 50%;
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
-  padding: 20px;
+  margin: 10px;
 }
 
-.input,
+.input {
+  width: 97%;
+  padding: 8px;
+  margin-bottom: 15px;
+  border: 1px solid #95a5a6;
+  border-radius: 3px;
+}
+
 .select {
   width: 100%;
   padding: 8px;
